--- a/conf/web/eslintrc.tmpl
+++ b/conf/web/eslintrc.tmpl
@@ -1,18 +1,25 @@
 module.exports = {
-    "root": true,
-    "parser": "babel-eslint",
-    "env": {
-        "es6": true,
-        "node": true
-    },
-    "extends": "eslint:recommended",
-    "parserOptions": {
-        "sourceType": "module"
-    },
-    "rules": {
-        "quotes": [ "error", "single" ],
-        "semi": [ "error", "always" ],
-        "no-unused-vars": "warn",
-        "no-console": "warn"
-    }
+	"root": true,
+	"parser": "babel-eslint",
+	"env": {
+		"es6": true,
+		"browser": true
+	},
+	"extends": "eslint:recommended",
+	"parserOptions": {
+		"sourceType": "module"
+	},
+	"plugins": [
+		"html",
+		"import"
+	],
+	"settings": {
+		"import/resolver": "webpack"
+	},
+	"rules": {
+		"quotes": ["error", "single"],
+		"semi": ["error", "always"],
+		"no-unused-vars": "warn",
+		"no-console": "warn"
+	}
 };
