--- a/conf/webpack/site/babelrc.tmpl
+++ b/conf/webpack/site/babelrc.tmpl
@@ -10,13 +10,14 @@
 						"not ie <= 8"
 					]
 				},
-				"modules": false
+				"modules": false,
+				"useBuiltIns": true
 			}
 		],
 		"stage-2"
 	],
 	"plugins": [
-		"transform-runtime"
+		"transform-regenerator"
 	],
 	"env": {
 		"test": {
