--- a/conf/webpack/site/src_index_js.tmpl
+++ b/conf/webpack/site/src_index_js.tmpl
@@ -1,6 +1,7 @@
 /**
 * 主模块文件
 */
+import 'babel-polyfill';
 import home from './pages/home';
 
 document.addEventListener('DOMContentLoaded', () => {
