--- a/conf/webpack/vue/router/package.tmpl
+++ b/conf/webpack/vue/router/package.tmpl
@@ -22,6 +22,7 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-stage-2": "^6.24.1",
     "chai": "^3.5.0",
+    "connect-history-api-fallback": "^1.3.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
