--- a/conf/console/package.tmpl
+++ b/conf/console/package.tmpl
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "clean": "gulp clean",
-    "build": "gulp",
+    "prod": "gulp",
     "dev": "gulp debug",
     "lint": "gulp eslint"
   },
