增加版本号集中管理机制

--- a/conf/console/package.tmpl
+++ b/conf/console/package.tmpl
@@ -15,21 +15,21 @@
   "author": "${auther}",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-node-debug": "^2.0.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.2",
-    "chai": "^3.5.0",
-    "del": "^2.2.2",
-    "eslint": "^3.19.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-eslint": "^3.0.1",
-    "gulp-sourcemaps": "^2.6.0",
-    "mocha": "^3.3.0"
+    "babel-cli": "",
+    "babel-eslint": "",
+    "babel-node-debug": "",
+    "babel-polyfill": "",
+    "babel-preset-env": "",
+    "chai": "",
+    "del": "",
+    "eslint": "",
+    "gulp": "",
+    "gulp-babel": "",
+    "gulp-eslint": "",
+    "gulp-sourcemaps": "",
+    "mocha": ""
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "babel-polyfill": ""
   }
 }
