--- a/conf/webpack/vue/raw/package.tmpl
+++ b/conf/webpack/vue/raw/package.tmpl
@@ -13,53 +13,53 @@
   "author": "${auther}",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-istanbul": "^4.1.4",
-    "babel-plugin-transform-regenerator": "^6.24.1",
-    "babel-preset-env": "^1.5.2",
-    "babel-preset-stage-2": "^6.24.1",
-    "chai": "^3.5.0",
-    "cross-env": "^5.0.1",
-    "css-loader": "^0.28.4",
-    "eslint": "^3.19.0",
-    "eslint-friendly-formatter": "^3.0.0",
-    "eslint-import-resolver-webpack": "^0.8.3",
-    "eslint-loader": "^1.8.0",
-    "eslint-plugin-html": "^3.0.0",
-    "eslint-plugin-import": "^2.6.0",
-    "express": "^4.15.3",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "file-loader": "^0.11.2",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "karma": "^1.7.0",
-    "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-coverage": "^1.1.1",
-    "karma-ie-launcher": "^1.0.0",
-    "karma-mocha": "^1.3.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.3.0",
-    "mockjs": "^1.0.1-beta3",
-    "node-sass": "^4.5.3",
-    "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^2.0.0",
-    "postcss-loader": "^2.0.6",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "url-loader": "^0.5.9",
-    "vue-loader": "^13.0.4",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.4.2",
-    "webpack": "^2.6.1",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-merge": "^4.1.0"
+    "autoprefixer": "",
+    "babel-core": "",
+    "babel-eslint": "",
+    "babel-loader": "",
+    "babel-plugin-istanbul": "",
+    "babel-plugin-transform-regenerator": "",
+    "babel-preset-env": "",
+    "babel-preset-stage-2": "",
+    "chai": "",
+    "cross-env": "",
+    "css-loader": "",
+    "eslint": "",
+    "eslint-friendly-formatter": "",
+    "eslint-import-resolver-webpack": "",
+    "eslint-loader": "",
+    "eslint-plugin-html": "",
+    "eslint-plugin-import": "",
+    "express": "",
+    "extract-text-webpack-plugin": "",
+    "file-loader": "",
+    "html-loader": "",
+    "html-webpack-plugin": "",
+    "karma": "",
+    "karma-chai": "",
+    "karma-chrome-launcher": "",
+    "karma-coverage": "",
+    "karma-ie-launcher": "",
+    "karma-mocha": "",
+    "karma-sourcemap-loader": "",
+    "karma-webpack": "",
+    "mocha": "",
+    "mockjs": "",
+    "node-sass": "",
+    "opn": "",
+    "optimize-css-assets-webpack-plugin": "",
+    "postcss-loader": "",
+    "rimraf": "",
+    "sass-loader": "",
+    "style-loader": "",
+    "url-loader": "",
+    "vue-loader": "",
+    "vue-style-loader": "",
+    "vue-template-compiler": "",
+    "webpack": "",
+    "webpack-dev-middleware": "",
+    "webpack-hot-middleware": "",
+    "webpack-merge": ""
   },
   "browserslist": [
     "> 1%",
@@ -67,7 +67,7 @@
     "not ie <= 8"
   ],
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
-    "vue": "^2.4.2"
+    "babel-polyfill": "",
+    "vue": ""
   }
 }
