--- a/conf/console/package.tmpl
+++ b/conf/console/package.tmpl
@@ -10,7 +10,8 @@
     "clean": "gulp clean",
     "prod": "gulp",
     "dev": "gulp debug",
-    "lint": "gulp eslint"
+    "lint": "gulp eslint",
+    "build": "gulp build"
   },
   "author": "${auther}",
   "license": "ISC",
